[project]
name = "kendalfloodriskmanagement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "kaleido>=1.2.0",
    "lxml>=6.0.2",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]
